--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "lint": "eslint . --ext .js || true"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,12 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "jest": "^26.6.2"
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.2",
+    "prettier": "^2.1.2"
   }
 }
