--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-mapper",
+  "name": "data-shifter",
   "version": "1.0.0",
   "description": "A data shapeshifting library",
   "main": "index.js",
